--- a/src/main/resources/templates/bookDetails.html
+++ b/src/main/resources/templates/bookDetails.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Book Details</title>
 </head>
 <body>
 <header>
@@ -13,8 +13,9 @@
     <h2 th:text="${book.getYear()}"></h2>
     <h2>Authors:</h2>
     <ul>
-        <li th:each="author: ${book.getAuthors()}"
-            th:text="${author.getName()}+ ' ' + ${author.getSurname()}"> </li>
+        <li th:each="author : ${book.getAuthors()}"
+            th:text="${author.getName()} + ' ' + ${author.getSurname()}">
+        </li>
     </ul>
 </section>
 
