--- a/src/main/resources/templates/listBooks.html
+++ b/src/main/resources/templates/listBooks.html
@@ -1,32 +1,56 @@
-<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
-<head>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"><head>
     <meta charset="utf-8">
     <title>Books Homepage - Welcome to My Book Store</title>
+    <link rel="stylesheet" href="css">
     <style type="text/css">
         body {
-            width: 800px;
+            width: 600px;
             margin: auto;
         }
     </style>
 </head>
-<body>
+<body style="width: 1100px">
 <header>
     <h1>Welcome to My Book Store</h1>
 </header>
-<main>
+<main id="main">
+
     <h2>Choose book:</h2>
     <form th:method="POST" action="/author">
-    <p th:each="book: ${books}">
-        <input checked type="radio" name="bookIsbn" th:value="${book.getIsbn()}" id="bookIsbn">
-        <label for="bookIsbn">
-            <span>Title: <th:block th:text="${book.getTitle()}"></th:block> | </span>
-            <span>Genre: <th:block th:text="${book.getGenre()}"></th:block> | </span>
-            <span>Year: <th:block th:text="${book.getYear()}"></th:block> | </span>
-        </label>
-    </p>
-        <input type="submit" value="submit">
+    <!-- Display radio buttons for each book,
+            the value should be the isbn
+            and the displayed text should be Title: <bookTitle>, Genre:<genre>, Year: <year> -->
+        <p th:each="book : ${books}">
+            <input checked type="radio" name="bookIsbn" th:value="${book.getIsbn()}" id="bookIsbn">
+            <label for="bookIsbn">
+                <span>Title: <th:block th:text="${book.getTitle()}"></th:block> | </span>
+                <span>Genre: <th:block th:text="${book.getGenre()}"></th:block> | </span>
+                <span>Year: <th:block th:text="${book.getYear()}"></th:block> | </span>
+                <span>BookStore: <th:block th:text="${book.getBookStore()}"></th:block></span>
+                <a class="btnLink" th:href="@{/books/editBookForm/{id}(id = ${book.getId()})}">Edit</a>
+                <a class="btnLink" th:href="@{/books/delete/{id}(id = ${book.getId()})}">Delete</a>
+                <a class="btnLink" th:href="@{/books/copy/{id}(id = ${book.getId()})}">Make a copy</a>
+            </label>
+        </p>
+        <input type='submit' value='Submit'>
+    </form>
+
+    <h2>Add book:</h2>
+    <a class="btnLink" href="/books/addBookForm">Click here to add a new book!</a>
+
+    <h2>Choose author:</h2>
+    <form th:method="POST" th:action="@{/authorDetails}">
+        <!-- Display radio buttons for each book,
+                the value should be the isbn
+                and the displayed text should be Title: <bookTitle>, Genre:<genre>, Year: <year> -->
+        <p th:each="author : ${authors}">
+            <input checked type="radio" name="authorId" th:value="${author.getId()}" id="authorId">
+            <label for="authorId">
+                <span><th:block th:text="${author.getName()}"></th:block> </span>
+                <span><th:block th:text="${author.getSurname()}"></th:block></span>
+            </label>
+        </p>
+        <input type='submit' value='Submit'>
     </form>
 
 </main>
